# forma-veridica

./: Cargo.toml
bin_for_test_launch/: Cargo.toml
bin_for_test_launch/src/: main.rs
calibration_app/: Cargo.toml
calibration_app/src/: main.rs
generate_calibration_pattern/: Cargo.toml
generate_calibration_pattern/src/: app.rs  lib.rs  main.rs
lib_cv/: Cargo.toml  main.rs.old
lib_cv/src/: calibration.rs  correspondence.rs  lib.rs  reconstruction.rs  utils.rs
reconstruction_app/: Cargo.toml
reconstruction_app/src/: app.rs  main.rs  model.rs  ui.rs
src/: main.rs
src/lib_cv/: calibration.rs  correspondence.rs  mod.rs
