[workspace]
members = [
    "calibration_app",
    "generate_calibration_pattern",
    "lib_cv",
    "reconstruction_app",
]
resolver = "2"

[workspace.dependencies]
opencv = { version = "0.94.4", default-features = false, features = [
    "imgproc",
    "imgcodecs",
    "highgui",
    "videoio",
    "calib3d",
    "sfm",
    "objdetect",
    "video",
    "dnn",
] }
log = "0.4"
env_logger = "0.11.8"
eframe = "0.31.1"
serde = { version = "1.0.228", features = ["derive"] }
